--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -507,7 +507,7 @@
   "staking.rewards.no.rewards": "報酬なし",
   "staking.rewards.note": "ステークを委任することにより得た報酬は自動的に報酬アカウントに振り込まれ、ウォレット残高に追加されます。",
   "staking.rewards.tableHeader.total": "合計",
-  "staking.rewards.tableHeader.unspent": "!!!Unspent",
+  "staking.rewards.tableHeader.unspent": "未使用（ADA)",
   "staking.rewards.tableHeader.rewardsAddress": "報酬アドレス",
   "staking.rewards.tableHeader.wallet": "ウォレット",
   "staking.rewards.title": "獲得した委任報酬",
@@ -1154,6 +1154,8 @@
   "wallet.summary.currency.isFetchingRate": "フェッチ時の換算レート",
   "wallet.summary.currency.lastFetched": "換算：{fetchedTimeAgo}",
   "wallet.summary.currency.title": "換算通貨：",
+  "wallet.summary.header.rewardsEarned": "獲得した報酬",
+  "wallet.summary.header.rewardsUnspent": "未使用の報酬",
   "wallet.summary.header.pendingTransactionsLabel": "処理中のトランザクション数",
   "wallet.summary.header.transactionsLabel": "トランザクション数",
   "wallet.summary.noTokens.learnMore.linkLabel": "もっと知る",
