--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -506,9 +506,9 @@
   "staking.rewards.learnMore.linkUrl": "!!!https://staking.cardano.org/",
   "staking.rewards.no.rewards": "No rewards",
   "staking.rewards.note": "Rewards earned by delegating your stake are automatically collected into your reward account and added to your wallet balance.",
+  "staking.rewards.tableHeader.rewardsAddress": "Rewards address",
   "staking.rewards.tableHeader.total": "Total",
   "staking.rewards.tableHeader.unspent": "Unspent",
-  "staking.rewards.tableHeader.rewardsAddress": "Rewards address",
   "staking.rewards.tableHeader.wallet": "Wallet",
   "staking.rewards.title": "Earned delegation rewards",
   "staking.rewardsHistory.csv.column.amount": "Amount",
@@ -1154,9 +1154,10 @@
   "wallet.summary.currency.isFetchingRate": "fetching conversion rates",
   "wallet.summary.currency.lastFetched": "converted {fetchedTimeAgo}",
   "wallet.summary.currency.title": "Converts as",
-  "wallet.summary.header.rewardsEarned": "earned rewards,",
-  "wallet.summary.header.rewardsUnspent": "rewards unspent",
   "wallet.summary.header.pendingTransactionsLabel": "Number of pending transactions",
+  "wallet.summary.header.rewardsEarned": "earned rewards",
+  "wallet.summary.header.rewardsUnspendable": "All of the ada in this wallet is in the rewards account. Since transaction fees cannot be paid with rewards, please send 2 or more ada to this wallet to make the rewards spendable.",
+  "wallet.summary.header.rewardsUnspent": "rewards unspent",
   "wallet.summary.header.transactionsLabel": "Number of transactions",
   "wallet.summary.noTokens.learnMore.linkLabel": "Learn more",
   "wallet.summary.noTokens.learnMore.linkUrl": "https://iohk.io/en/blog/posts/2021/02/04/native-tokens-to-bring-new-utility-to-life-on-cardano/",
